# tikv-tikv

./: Cargo.toml  Makefile
cmd/: Cargo.toml
cmd/src/: server.rs  setup.rs  signal_handler.rs
cmd/tikv-ctl/: Cargo.toml
cmd/tikv-ctl/src/: cmd.rs  executor.rs  main.rs  util.rs
cmd/tikv-server/: Cargo.toml
components/backup/: Cargo.toml
components/backup/src/: endpoint.rs  writer.rs
components/backup/tests/integrations/: test_backup.rs
components/batch-system/src/: fsm.rs
components/cdc/: Cargo.toml
components/cdc/src/: channel.rs  endpoint.rs  lib.rs
components/cdc/tests/failpoints/: test_observe.rs
components/codec/src/: lib.rs
components/concurrency_manager/: Cargo.toml
components/configuration/src/: lib.rs
components/encryption/: Cargo.toml
components/encryption/export/: Cargo.toml
components/encryption/export/src/: lib.rs
components/encryption/src/: config.rs  errors.rs  lib.rs
components/encryption/src/master_key/: metadata.rs  mod.rs
components/engine/: Cargo.toml
components/engine/src/: errors.rs  iterable.rs
components/engine/src/rocks/: mod.rs
components/engine/src/rocks/util/: mod.rs
components/engine_panic/src/: cf_options.rs  db_options.rs  write_batch.rs
components/engine_rocks/: Cargo.toml
components/engine_rocks/src/: cf_options.rs  compact.rs  config.rs  db_options.rs  engine.rs  file_system.rs  lib.rs  metrics_flusher.rs  misc.rs  options.rs  properties.rs  raw.rs  rocks_metrics.rs  rocks_metrics_defs.rs  util.rs  write_batch.rs
components/engine_test/src/: lib.rs
components/engine_traits/: Cargo.toml
components/engine_traits/src/: cf_options.rs  db_options.rs  engine.rs  errors.rs  lib.rs  misc.rs  options.rs  write_batch.rs
components/engine_traits/tests/src/: test_metrics_flusher.rs
components/error_code/: Cargo.toml  bin.rs
components/error_code/src/: lib.rs
components/external_storage/: Cargo.toml
components/external_storage/examples/: scli.rs
components/external_storage/export/: Cargo.toml
components/external_storage/export/examples/: scli.rs
components/external_storage/export/src/: export.rs  lib.rs
components/external_storage/src/: lib.rs  util.rs
components/file_system/: Cargo.toml
components/file_system/src/: file.rs  lib.rs
components/online_config/src/: lib.rs
components/pd_client/: Cargo.toml
components/pd_client/src/: errors.rs  lib.rs
components/raft_log_engine/: Cargo.toml
components/raft_log_engine/src/: engine.rs  lib.rs
components/raftstore/: Cargo.toml
components/raftstore/src/: errors.rs  lib.rs
components/raftstore/src/coprocessor/: dispatcher.rs  error.rs  mod.rs  split_observer.rs
components/raftstore/src/coprocessor/split_check/: mod.rs
components/raftstore/src/store/: peer.rs  peer_storage.rs  snap.rs
components/resolved_ts/src/: cmd.rs  endpoint.rs
components/resource_metering/: Cargo.toml
components/resource_metering/src/: lib.rs  model.rs
components/security/: Cargo.toml
components/security/src/: lib.rs
components/server/: Cargo.toml
components/server/src/: raft_engine_switch.rs  server.rs  signal_handler.rs
components/sst_importer/: Cargo.toml
components/sst_importer/src/: errors.rs  import_file.rs  lib.rs  sst_importer.rs  sst_writer.rs  util.rs
components/test_backup/: Cargo.toml
components/test_backup/src/: lib.rs
components/test_raftstore/: Cargo.toml
components/test_raftstore/src/: cluster.rs  common-test.toml  lib.rs  node.rs  pd.rs  server.rs  transport_simulate.rs  util.rs
components/test_sst_importer/: Cargo.toml
components/test_util/: Cargo.toml
components/test_util/src/: lib.rs  runner.rs  security.rs
components/tikv_alloc/: Cargo.toml
components/tikv_kv/src/: cursor.rs  lib.rs  rocksdb_engine.rs
components/tikv_util/: Cargo.toml
components/tikv_util/src/: checksum.rs  config.rs  deadline.rs  future.rs  lib.rs  lru.rs  stream.rs  time.rs
components/tikv_util/src/codec/: mod.rs
components/tikv_util/src/future_pool/: mod.rs
components/tikv_util/src/logger/: file_log.rs  formatter.rs  mod.rs
components/tikv_util/src/metrics/: mod.rs  process_linux.rs  threads_linux.rs  tls.rs
components/tikv_util/src/mpsc/: batch.rs
components/tikv_util/src/speed_limit/: clock.rs  io.rs  limiter.rs  mod.rs
components/tikv_util/src/sys/: cgroup.rs  mod.rs  thread.rs
components/tikv_util/src/worker/: future.rs  mod.rs
components/txn_types/: Cargo.toml
components/txn_types/src/: lib.rs
etc/: config-template.toml  error_code.toml
fuzz/: Cargo.toml
fuzz/fuzzer-afl/: Cargo.toml
fuzz/fuzzer-honggfuzz/: Cargo.toml
fuzz/targets/: Cargo.toml  mod.rs
scripts/: check-bins.py
src/: config.rs  lib.rs  read_pool.rs
src/import/: duplicate_detect.rs  sst_service.rs
src/server/: debug.rs  errors.rs  raft_client.rs  raftkv.rs  server.rs
src/server/gc_worker/: applied_lock_collector.rs  gc_manager.rs  gc_worker.rs  mod.rs
src/server/load_statistics/: linux.rs  mod.rs
src/server/lock_manager/: client.rs  deadlock.rs  mod.rs  waiter_manager.rs
src/server/service/: debug.rs  kv.rs
src/server/status_server/: mod.rs
src/storage/: errors.rs  mod.rs
src/storage/kv/: mod.rs
src/storage/mvcc/: mod.rs
src/storage/raw/: encoded.rs  store.rs
src/storage/txn/: mod.rs
tests/: Cargo.toml
tests/benches/misc/: mod.rs
tests/failpoints/cases/: mod.rs  test_import_service.rs  test_split_region.rs  test_storage.rs
tests/integrations/: mod.rs
tests/integrations/backup/: mod.rs
tests/integrations/config/: mod.rs  test-cache-compatible.toml  test-custom.toml  test-default.toml  test-log-compatible.toml  test_config_client.rs
tests/integrations/config/dynamic/: raftstore.rs
tests/integrations/import/: util.rs
tests/integrations/raftstore/: test_bootstrap.rs  test_region_heartbeat.rs  test_scale_pool.rs  test_service.rs
tests/integrations/resource_metering/: test_read_keys.rs
tests/integrations/resource_metering/test_suite/: mod.rs
tests/integrations/server/: kv_service.rs  mod.rs  raft_client.rs
tests/integrations/storage/: mod.rs  test_raftkv.rs
(+12 files in other folders)
