[package]
name = "tikv"
version = "5.4.30"
authors = ["The TiKV Authors"]
description = "A distributed transactional key-value database powered by Rust and Raft"
license = "Apache-2.0"
keywords = ["KV", "distributed-systems", "raft"]
homepage = "https://tikv.org"
repository = "https://github.com/tikv/tikv/"
readme = "README.md"
edition = "2018"
publish = false

[features]
default = ["test-engines-rocksdb"]
tcmalloc = ["tikv_alloc/tcmalloc"]
jemalloc = ["tikv_alloc/jemalloc", "engine_rocks/jemalloc"]
mimalloc = ["tikv_alloc/mimalloc"]
snmalloc = ["tikv_alloc/snmalloc"]
portable = ["engine_rocks/portable"]
sse = ["engine_rocks/sse"]
mem-profiling = ["tikv_alloc/mem-profiling"]
failpoints = [
  "fail/failpoints",
  "raftstore/failpoints",
  "tikv_util/failpoints",
  "engine_rocks/failpoints"
]
testexport = ["raftstore/testexport"]
test-engines-rocksdb = [
  "engine_test/test-engines-rocksdb",
]
test-engines-panic = [
  "engine_test/test-engines-panic",
]
bcc-iosnoop = [
  "file_system/bcc-iosnoop",
]

# for testing configure propegate to other crates
# https://stackoverflow.com/questions/41700543/can-we-share-test-utilites-between-crates
testing = []

[lib]
name = "tikv"

[dependencies]
api_version = { path = "components/api_version", default-features = false }
anyhow = "1.0"
async-stream = "0.2"
async-trait = "0.1"
backtrace = "0.3"
batch-system = { path = "components/batch-system", default-features = false }
byteorder = "1.2"
chrono = "0.4"
codec = { path = "components/codec", default-features = false }
concurrency_manager = { path = "components/concurrency_manager", default-features = false }
online_config = { path = "components/online_config" }
crc32fast = "1.2"
crc64fast = "0.1"
crossbeam = "0.8"
engine_panic = { path = "components/engine_panic", default-features = false }
engine_rocks = { path = "components/engine_rocks", default-features = false }
engine_test = { path = "components/engine_test", default-features = false }
engine_traits = { path = "components/engine_traits", default-features = false }
engine_traits_tests = { path = "components/engine_traits_tests", default-features = false }
error_code = { path = "components/error_code", default-features = false }
fail = "0.5"
file_system = { path = "components/file_system", default-features = false }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
grpcio-health = { version = "0.9", default-features = false, features = ["protobuf-codec"] }
hex = "0.4"
hyper-tls = "0.5"
itertools = "0.10"
openssl = "0.10"
hyper = { version = "0.14", features = ["full"] }
http = "0"
into_other = { path = "components/into_other", default-features = false }
keys = { path = "components/keys", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
libc = "0.2"
libloading = "0.7"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log_wrappers = { path = "components/log_wrappers" }
memory_trace_macros = { path = "components/memory_trace_macros" }
mime = "0.3.13"
more-asserts = "0.2"
murmur3 = "0.5.1"
nom = { version = "5.1.0", default-features = false, features = ["std"] }
notify = "4"
num_cpus = "1"
pd_client = { path = "components/pd_client", default-features = false }
case_macros = {path = "components/case_macros"}
pin-project = "1.0"
pnet_datalink = "0.23"
pprof = { version = "^0.6", default-features = false, features = ["flamegraph", "protobuf"] }
protobuf = { version = "2.8", features = ["bytes"] }
raft = { version = "0.6.0-alpha", default-features = false, features = ["protobuf-codec"] }
raftstore = { path = "components/raftstore", default-features = false }
raft_log_engine = { path = "components/raft_log_engine", default-features = false }
rand = "0.8"
regex = "1.3"
num-traits = "0.2.14"
rev_lines = "0.2.1"
security = { path = "components/security", default-features = false }
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
strum = { version = "0.20", features = ["derive"] }
parking_lot = "0.11"
prometheus = { version = "0.13", features = ["nightly"] }
prometheus-static-metric = "0.5"
sst_importer = { path = "components/sst_importer", default-features = false }
sysinfo = "0.16"
tempfile = "3.0"
match_template = { path = "components/match_template" }
paste = "1.0"
thiserror = "1.0"
tikv_alloc = { path = "components/tikv_alloc" }
tikv_kv = { path = "components/tikv_kv", default-features = false }
tikv_util = { path = "components/tikv_util", default-features = false }
collections = { path = "components/collections" }
time = "0.1"
tokio = { version = "1.12", features = ["full"] }
tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
tokio-openssl = "0.6"
toml = "0.5"
txn_types = { path = "components/txn_types", default-features = false }
url = "2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
resource_metering = { path = "components/resource_metering" }
seahash = "4.1.0"

[dev-dependencies]
panic_hook = { path = "components/panic_hook" }
reqwest = { version = "0.11", features = ["blocking"] }
test_sst_importer = { path = "components/test_sst_importer", default-features = false }
test_util = { path = "components/test_util", default-features = false }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "time"] }
zipf = "7.0"
hyper-openssl = "0.9"

[patch.crates-io]
# TODO: remove this when new raft-rs is published.
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/suuyaoo/rust-protobuf", branch = "tikv-5.4" }
protobuf-codegen = { git = "https://github.com/suuyaoo/rust-protobuf", branch = "tikv-5.4" }

# remove this when https://github.com/danburkert/fs2-rs/pull/42 is merged.
fs2 = { git = "https://github.com/tabokie/fs2-rs", branch = "tikv" }

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "5125fc1a69496b73b26b3c08b6e8afc3c665a56e" }

# When you modify TiKV cooperatively with kvproto, this will be useful to submit the PR to TiKV and the PR to
# kvproto at the same time.
# After the PR to kvproto is merged, remember to comment this out and run `cargo update -p kvproto`.
[patch.'https://github.com/pingcap/kvproto']
kvproto = {git = "https://github.com/suuyaoo/tikv-kvproto", branch="release-5.4"}

[workspace]
# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
# Without resolver = 2, using `cargo build --features x` to build `cmd`
# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
resolver = "2"
members = [
  "fuzz",
  "fuzz/fuzzer-afl",
  "fuzz/fuzzer-libfuzzer",
  "fuzz/fuzzer-honggfuzz",
  "tests",
  "cmd/tikv-server",
  "cmd/tikv-ctl",
  "components/test_backup",
  "components/test_raftstore",
  "components/test_storage",
  "components/test_sst_importer",
  "components/test_util",
  "components/test_pd",
  "components/tikv_alloc",
  "components/match_template",
  "components/codec",
  "components/online_config",
  "components/panic_hook",
  "components/log_wrappers",
  "components/tikv_util",
  "components/pd_client",
  "components/external_storage",
  "components/external_storage/export",
  "components/case_macros",
  "components/backup",
  "components/keys",
  "components/sst_importer",
  "components/txn_types",
  "components/resolved_ts",
  "components/batch-system",
  "components/cdc",
  "components/raftstore",
  "components/into_other",
  "components/error_code",
  "components/concurrency_manager",
  "components/server",
  "components/file_system",
  "components/collections",
  "components/resource_metering",
  "components/api_version",
]
default-members = ["cmd/tikv-server", "cmd/tikv-ctl"]

[profile.dev]
opt-level = 0
debug = 1 # required for line numbers in tests, see tikv #5049
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false

[profile.release.package.server]
opt-level = 1
codegen-units = 4

[profile.test]
opt-level = 0
debug = 1 # enable line numbers by default for easy test debugging
codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

# The benchmark profile is identical to release, except that lto = false
[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
