[package]
edition = "2018"
name = "concurrency_manager"
publish = false
version = "0.0.1"

[dependencies]
parking_lot = "0.11"
tokio = { version = "1.5", features = ["macros", "sync", "time"] }
txn_types = { path = "../txn_types", default-features = false }
fail = "0.5"
crossbeam-skiplist = "0.1"

[dev-dependencies]
rand = "0.8"
futures = "0.3"
criterion = "0.3"
tikv_alloc = { path = "../tikv_alloc", features = ["jemalloc"] }

[[bench]]
name = "lock_table"
path = "benches/lock_table.rs"
harness = false
