[package]
name = "security"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
serde = "1.0"
serde_derive = "1.0"
collections = { path = "../collections" }

[dev-dependencies]
tempfile = "3.0"
