[package]
name = "test_backup"
version = "0.0.1"
edition = "2018"
publish = false

[features]
default = []

[dependencies]
backup = { path = "../backup" }
collections = { path = "../collections" }
concurrency_manager = { path = "../concurrency_manager" }
crc64fast = "1.0"
engine_traits = { path = "../engine_traits" }
external_storage_export = { path = "../external_storage/export", default-features = false }
file_system = { path = "../file_system", default-features = false }
futures = "0.3"
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
rand = "0.8"
tempfile = "3.0"
test_raftstore = { path = "../test_raftstore" }
tikv = { path = "../../", default-features = false }
tikv_util = { path = "../tikv_util", default-features = false }
txn_types = { path = "../txn_types", default-features = false }
